<resources>
    <string name="app_name">Epam Android Training</string>
    <string name="action_settings">Settings</string>
    <string name="get_data_error">"Error while try to get from sharedPreference: "</string>
    <string name="save_data_error">"Error while try to save in sharedPreference : "</string>
    <string name="tv_question">1+1=</string>
    <string name="q1">1+1=</string>
    <string name="bt_next">NEXT</string>
    <string name="q2">5-2=</string>
    <string name="q3">12/4=</string>
    <string name="post_to_facebook">Post to Facebook</string>
    <string name="post">POST</string>
    <string name="fb1_text1">Josephine Williams is =) feeling happy with Joey Ramos and 5 others.</string>
    <string name="jw_message">Had a great moment this morning with some close friends</string>
    <string name="fb_add_post">Add to your post</string>
    <string name="in_about">Директор (управление проектами) в\n GoldenPhase Solar\n МГУ-Москва</string>
    <string name="in_about_com">Новосибирск \u25CF 500+ \u0009\u0009\u0009 </string>
    <string name="in_nick1">Мария Соловьёва</string>
    <string name="in_send_mess">Отправить сообщение</string>
    <string name="in_set_cont">Устанивить контакт</string>
    <string name="in_about_prof">Менеджер высшего звена в сфере\n возобновляемых источников энергии с 10 ...</string>
    <string name="in_friens_info">Основные сведения</string>
    <string name="in_cont_num_title">1 общий контакт</string>
    <string name="in_about_same_cont">У вас с Марией общий контакт - Наталия Ивановна</string>
    <string name="surrounded_button">surrounded button</string>
    <string name="ur_user_name">User name:</string>
    <string name="ur_check">check</string>
    <string name="save">Save</string>
    <string name="e_mail">E-mail:</string>
    <string name="winter">Winter</string>
    <string name="wc_C">C</string>
    <string name="wc_humidity">"humidity: "</string>
    <string name="wc_persent">%</string>
    <string name="wc_wind">"wind: "</string>
    <string name="wc_speed_units">m/s</string>
</resources>
