<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/default_side_mrg"
                android:layout_marginRight="@dimen/default_side_mrg"
                android:layout_weight="0.81">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="290dp"
        android:layout_alignParentBottom="true"
        android:background="@color/in_bg_white"/>

    <TextView
        android:id="@+id/tv_nick"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/in_avat_pers"
        android:layout_centerHorizontal="true"
        android:text="@string/in_nick1"
        android:textSize="@dimen/fb_msg4"
        android:textStyle="bold"
        android:typeface="monospace"/>


    <TextView
        android:id="@+id/tv_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_nick"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:maxLines="4"
        android:text="@string/in_about"
        android:textSize="@dimen/fb_msg2"/>

    <ImageView
        android:id="@+id/in_avat_pers"
        android:layout_width="130dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/in_0002"/>


    <TextView
        android:id="@+id/tv_about_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_about"
        android:layout_marginLeft="@dimen/default_second_row"
        android:gravity="center_horizontal"
        android:text="@string/in_about_com"
        android:textSize="@dimen/fb_msg2"/>

    <ImageView
        android:id="@+id/in_community"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_about_com"
        android:layout_below="@id/tv_about"
        app:srcCompat="@drawable/ic_people_outline_black_24dp"/>

    <ImageView
        android:id="@+id/in_point"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@id/tv_about_com"
        android:layout_below="@id/tv_about"
        app:srcCompat="@drawable/ic_people_outline_black_24dp"/>

    <View
        android:id="@+id/in_empty_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_below="@id/in_point"
        android:layout_centerHorizontal="true"
        android:layout_marginLeft="@dimen/in_p_left"
        android:background="@color/colorAccent">

    </View>

    <Button
        android:id="@+id/in_btn_send_mess"
        style="@style/InButton"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_alignLeft="@id/in_empty_view"
        android:layout_below="@id/in_point"
        android:text="@string/in_send_mess"/>

    <Button
        android:id="@+id/in_btn_set_cont"
        style="@style/InButtonBlue"
        android:layout_width="148dp"
        android:layout_height="35dp"
        android:layout_alignRight="@id/in_empty_view"
        android:layout_below="@id/in_point"
        android:text="@string/in_set_cont"/>

    <TextView
        android:id="@+id/tv_about_prof"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/in_btn_set_cont"
        android:layout_centerHorizontal="true"
        android:gravity="center_horizontal"
        android:maxLines="2"
        android:paddingTop="@dimen/default_side_mrg_mini"
        android:text="@string/in_about_prof"
        android:textSize="@dimen/fb_msg"/>


</RelativeLayout>