<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                xmlns:app="http://schemas.android.com/apk/res-auto"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_marginLeft="@dimen/default_side_mrg"
                android:layout_marginRight="@dimen/default_side_mrg"
                android:layout_marginTop="@dimen/default_side_mrg_mini"
                android:layout_weight="0.2"
                android:background="@color/in_bg_white">


    <TextView
        android:id="@+id/tv_friends_info"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:text="@string/in_friens_info"
        android:textSize="@dimen/fb_msg2"
        android:textStyle="bold"
        android:typeface="monospace"/>

    <ImageView
        android:id="@+id/in_friend_avat"
        android:layout_width="50dp"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:scaleType="fitEnd"
        app:srcCompat="@drawable/in_0005"/>

    <TextView
        android:id="@+id/tv_friend_about"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_friends_info"
        android:layout_marginLeft="@dimen/default_second_row"
        android:gravity="left|start"
        android:text="@string/in_cont_num_title"
        android:textSize="@dimen/fb_msg"
        android:textStyle="bold"/>

    <TextView
        android:id="@+id/tv_friend_about_com"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/tv_friend_about"
        android:layout_marginLeft="@dimen/default_second_row"
        android:gravity="left|start"
        android:text="@string/in_about_same_cont"
        android:textSize="@dimen/fb_msg"/>


</RelativeLayout>